fix list vertical spacing

--- a/static/css/slate.css
+++ b/static/css/slate.css
@@ -1426,7 +1426,7 @@ ul ul,
 ol ul,
 ul ol,
 ol ol {
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 .list-unstyled {
   padding-left: 0;
